--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
 </head>
 <link rel="stylesheet" type="text/css" href="FirstPage.css">
 <body>
-
-<h1> Hello Mac!</h1> 
-<div id="header">header</div>
-<h2 class="odd"> I'm Neo </h2>
-<h2 class="even"> I'm Chin</h2>
-<h2 class="odd"> I'm Neo </h2>
-<h2 class="even"> I'm Chin</h2>
-<div id="footer">footer</div>
+   <div class="header"></div>
+   <div class="wrapper"></div>
 
 </body>
 
